# edsl-examen

./: CHANGELOG.md  LICENSE  README.md  edsl-examen.cabal
src/: DeepEmbedding.hs  Parser.hs  ShallowEmbedding.hs
src/Extended/: DeepEmbedding.hs  ExprParser.hs  ShallowEmbedding.hs
src/Parsing/: ExprParser.hs  Parser.hs
test/: DeepEmbeddingTests.hs  ExtendedEmbeddingTests.hs  Main.hs  ParseTests.hs  ShallowEmbeddingTests.hs  ShowTests.hs
