cabal-version:   3.0
name:            edsl-examen
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          Tomás Spognardi
maintainer:      tomas.spognardi@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    DeepEmbedding
    Extended.DeepEmbedding
    Extended.ExprParser
    Extended.ShallowEmbedding
    Parsing.ExprParser
    Parsing.Parser
    ShallowEmbedding
  build-depends:    base ^>=4.17.2.1
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite edsl-examen-test
  import:           warnings
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  other-modules:
    DeepEmbeddingTests
    ExtendedEmbeddingTests
    ParseTests
    ShallowEmbeddingTests
    ShowTests
  build-depends:
    , base         ^>=4.17.2.1
    , edsl-examen
    , tasty        ^>=1.5
    , tasty-hunit  ^>=0.10
